2006-09-28 [colin]	2.5.2cvs19

	* src/action.c
	* src/compose.c
	* src/folderview.c
	* src/mainwindow.c
	* src/messageview.c
	* src/summary_search.c
	* src/toolbar.c
		Avoid using summaryview->ctree directly

2006-09-28 [colin]	2.5.2cvs18

	* src/summaryview.c
	* src/summaryview.h
		Add helpers to freeze/thaw/grab_focus
		Factorize calls to freeze/thaw/grab_focus
		

2006-09-28 [colin]	2.5.2cvs17

	* src/main.c
		More guards for the session management

2006-09-28 [colin]	2.5.2cvs16

	* src/folderview.c
	* src/gtk/gtksctree.c
	* src/gtk/gtksctree.h
		Make expanding not recursive in folderview

2006-09-28 [colin]	2.5.2cvs15

	* src/addressbook.c
		If nothing is selected in the list (right part)
		and a group is selected in the tree (left part),
		mail this group.

2006-09-28 [colin]	2.5.2cvs14

	* src/Makefile.am
		Actually use SM_LIBS

2006-09-28 [ticho]	2.5.2cvs13

	* src/export.c
	* src/messageview.c
	* src/mimeview.c
	* src/news.c
	* src/pop.c
	* src/prefs_themes.c
	* src/procmsg.c
		Small i18n string optimization.
	* src/send_message.c
	* src/summaryview.c
	* src/common/session.c
	* src/common/smtp.c
	* src/common/ssl_certificate.c
	* src/common/utils.c
		Use "Couldn't" instead of "Can't" in UI messages,
		where appropriate.

2006-09-28 [colin]	2.5.2cvs12

	* configure.ac
		Possibly fix link errors

2006-09-27 [wwp]	2.5.2cvs11

	* src/gtk/authors.h
	* doc/man/sylpheed-claws.1
	* manual/ack.xml
	* manual/es/ack.xml
	* manual/fr/ack.xml
	* manual/pl/ack.xml
		Updated authors info (me, myself and I).

2006-09-27 [colin]	2.5.2cvs10

	* src/addressbook.c
		Remove useless printf

2006-09-27 [wwp]	2.5.2cvs9

	* src/editgroup.c
	* src/send_message.c
	* src/inc.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/gtk/progressdialog.c
		remember more windows' sizes (send dialog, received dialog,
		edit group in addressbook).

2006-09-27 [colin]	2.5.2cvs8

	* configure.ac
	* src/main.c
	* src/mainwindow.h
		Use libSM to communicate with the session